@@ -1,5 +1,12 @@
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Ide.Gui.Content/IFoldable.cs,
+	  MonoDevelop.Ide.Commands/EditCommands.cs, MonoDevelop.Ide.addin.xml,
+	  MonoDevelop.Ide.mdp, Makefile.am,
+	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Added some folding commands.
+
+2008-02-05  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Ide.addin.xml: Fixed a label.
 
 2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 
